# AI-Hydro

./: .gitignore  .vscodeignore  404.html  AI_HYDRO_FINAL_COMPLETE_WORKFLOW.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLUGIN_GUIDE.md  README.md  biome.jsonc  clean_rebuild.sh  index.html  mkdocs.yml  package-lock.json  package.json  sitemap.xml  test_watershed_to_map.py  verify_extension_installation.sh
.aihydrorules/: research.md  tools.md
.clinerules/: AIHydro-overview.md  research.md  tools.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: python-tests.yml
architecture/: index.html
blog/: index.html
changelog/: index.html
citing/: index.html
contributing/: index.html
docs/: architecture.md  changelog.md  citing.md  contributing.md  index.md  installation.md  provenance.md  python-api.md  quickstart.md  roadmap.md  tools-reference.md
docs/blog/: .authors.yml
docs/getting-started/: first-analysis.md  installation.md  quickstart.md
docs/guide/: literature.md  project-session.md  researcher-profile.md  sessions.md  vscode-extension.md
docs/plugins/: data-contract.md  entry-point.md  overview.md  standalone-server.md
docs/stylesheets/: extra.css
docs/tools/: analysis.md  index.md  modelling.md  project.md  session.md
getting-started/first-analysis/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/literature/: index.html
guide/project-session/: index.html
guide/researcher-profile/: index.html
guide/sessions/: index.html
guide/vscode-extension/: index.html
installation/: index.html
knowledge/: CONTRIBUTING.md  README.md  schema.json
knowledge/concepts/: README.md  camels_metadata.json  model_descriptions.json
knowledge/datasets/: README.md
knowledge/instructions/: README.md  best_practices.json  common_pitfalls.json  data_validation.json  error_handling.json  general_guidelines.json  task_patterns.json
knowledge/templates/: README.md
knowledge/tools/: README.md  camels_tools.json  tier1_libraries.json  tier2_wrappers.json  tier3_tools.json
knowledge/workflows/: README.md  auto_modeling.yaml  compute_signatures.yaml  (+1 more)
mcp-config-examples/: claude-code.json  cursor.json
provenance/: index.html
python/: CONTRIBUTING.md  community_tool_template.py  mcp_server.py  pyproject.toml  requirements-rag.txt  setup_mcp.py
python-api/: index.html
python/ai_hydro/: README.md  __init__.py  session.py
python/ai_hydro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/ai_hydro/analysis/: __init__.py  curve_number.py  geomorphic.py  signatures.py  twi.py  watershed.py
python/ai_hydro/community/: __init__.py
python/ai_hydro/core/: __init__.py  types.py
python/ai_hydro/data/: __init__.py  forcing.py  landcover.py  soil.py  streamflow.py
python/ai_hydro/knowledge/: hydrology_concepts.json
python/ai_hydro/mcp/: __init__.py  __main__.py  app.py  helpers.py  registry.py  tools_analysis.py  tools_docs.py  tools_modelling.py  tools_project.py  tools_session.py
python/ai_hydro/modelling/: __init__.py  metrics.py
python/ai_hydro/modelling/conceptual/: __init__.py  hbv.py
python/ai_hydro/modelling/neural/: __init__.py  lstm.py
python/ai_hydro/rag/: __init__.py  config.py  decision_engine.py  embeddings.py  engine.py  knowledge_loader.py  tool_recommender.py
python/ai_hydro/registry/: __init__.py  loader.py  tool_registry.py  workflow_registry.py
python/ai_hydro/session/: __init__.py  persona.py  project.py  store.py
python/ai_hydro/tools/: __init__.py
python/ai_hydro/tools/cache/: aiohttp_cache.sqlite
python/ai_hydro/utils/: __init__.py  path_resolver.py  validators.py
python/ai_hydro/workflows/: __init__.py  camels_extraction.py  compute_signatures.py  fetch_data.py  modeling.py
python/cache/: aiohttp_cache.sqlite
python/tests/: test_climate_tools.py  test_geomorphic_tools.py  test_hydrology_tools.py  test_integration_camels.py  test_knowledge_loader.py  test_mcp_integration.py  test_path_resolver.py  test_reference_gauges.py  test_tool_registry.py  test_validators.py  test_workflow_registry.py
quickstart/: index.html
roadmap/: index.html
search/: search_index.json
src/: common.ts  config.ts  extension.ts  registry.ts
stylesheets/: extra.css
tools/: index.html
tools-reference/: index.html
walkthrough/: step1.md  step2.md  step3.md  step4.md  step5.md
webview-ui/: package-lock.json  package.json  tailwind.config.mjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+398 files in other folders)
